Add main subcomponents

--- a/investsandbox-frontend/src/app/modules/registration/registration.component.html
+++ b/investsandbox-frontend/src/app/modules/registration/registration.component.html
@@ -1,7 +1,7 @@
-<h5>Регистрация</h5>
-<h1 class="tui-text_h1">Добро пожаловать в InvestSandbox!</h1>
+<h6>Регистрация</h6>
+<h1 class="tui-text_h1">Добро пожаловать<br>в InvestSandbox!</h1>
 <h2 class="tui-text_h6">
-  Тестируйте и пробуйте любые инвестиционные идеи в виртуальных песочницах и находите лучшее решение.
+  Тестируйте и анализируйте любые инвестиционные идеи в виртуальных песочницах и находите лучшее решение.
 </h2>
 
 <app-auth-form></app-auth-form>
