--- a/investsandbox-frontend/src/app/modules/main/account/account.component.html
+++ b/investsandbox-frontend/src/app/modules/main/account/account.component.html
@@ -1,10 +1,14 @@
+<h2 class="tui-text_h3">Мой аккаунт</h2>
 <tui-island>
     <div class="flex-container">
         <div class="flex-container__login">
             <tui-avatar [autoColor]="true" size="l" [text]="account.login"></tui-avatar>
             <h2 class="tui-island__title no-margin">{{account.login}}</h2>
         </div>
-        <button tuiButton size="xs" appearance="flat" (click)="turnEditForm()">Редактировать профиль</button>
+        <div class="flex-container__buttons">
+            <button tuiButton size="s" appearance="flat" (click)="turnEditForm()">Редактировать профиль</button>
+            <button tuiButton size="s" appearance="custom">Выйти из системы</button>
+        </div>
     </div>
     <app-auth-form *ngIf="editFormOpened" [edit]="true" [login]="account.login"></app-auth-form>
 </tui-island>
