--- a/investsandbox-frontend/src/app/modules/main/account/account.component.less
+++ b/investsandbox-frontend/src/app/modules/main/account/account.component.less
@@ -8,8 +8,24 @@
     display: flex;
     gap: 20px;
   }
+
+  &__buttons {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+  }
 }
 
 .no-margin {
   margin-bottom: 5px;
+}
+
+	
+button[appearance='custom'] {
+  color: var(--tui-negative);
+  transition: 0.6s;
+
+  &:hover {
+      background: var(--tui-error-bg-hover);
+  }
 }
