--- a/investsandbox-frontend/src/app/modules/main/main.component.less
+++ b/investsandbox-frontend/src/app/modules/main/main.component.less
@@ -1,5 +1,7 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
   margin: 0 auto; 
   max-width: 1200px;
   width: 80%;
