App without routing, auth and with mock services

--- a/investsandbox-frontend/src/app/modules/main/main.component.html
+++ b/investsandbox-frontend/src/app/modules/main/main.component.html
@@ -1,3 +1,4 @@
 <h6>Главная</h6>
 <app-account></app-account>
-<app-general-statistics></app-general-statistics>
+<app-general-stat></app-general-stat>
+<app-portfolios-list></app-portfolios-list>
