--- a/investsandbox-frontend/src/app/modules/registration/registration.component.less
+++ b/investsandbox-frontend/src/app/modules/registration/registration.component.less
@@ -1,6 +1,21 @@
 :host {
   display: block;
   margin: 0 auto;
-  max-width: 768px;
+  max-width: 1024px;
   width: 75%;
+}
+
+.forms {
+  align-items: center;
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+
+  &__auth {
+    flex: 0 1 35%;
+  }
+
+  &__registration {
+    flex: 1;
+  }
 }
