--- a/investsandbox-frontend/src/app/app.component.html
+++ b/investsandbox-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <tui-root>
   <app-registration></app-registration>
   <app-main></app-main>
-  <app-portfolio></app-portfolio>
+  <app-portfolio [portfolio]="account.portfolios[0]"></app-portfolio>
 </tui-root>
