--- a/investsandbox-frontend/src/app/modules/main/account/account.component.less
+++ b/investsandbox-frontend/src/app/modules/main/account/account.component.less
@@ -7,6 +7,11 @@
     align-items: center;
     display: flex;
     gap: 20px;
+
+    &__info {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__buttons {
@@ -17,7 +22,7 @@
 }
 
 .no-margin {
-  margin-bottom: 5px;
+  margin: 0;
 }
 
 	
