--- a/investsandbox-frontend/src/app/modules/registration/auth-form/auth-form.component.html
+++ b/investsandbox-frontend/src/app/modules/registration/auth-form/auth-form.component.html
@@ -1,13 +1,29 @@
-<form [formGroup]="form" class="form">
+<form [formGroup]="form" class="tui-form form">
   <div class="form_container">
-    <tui-group>
-      <tui-input formControlName="login">
-        Логин
-      </tui-input>
-      <tui-input-password formControlName="password">
-        Пароль
-      </tui-input-password>
+    <tui-group [orientation]="verticalOrientation">
+      <tui-group>
+        <tui-input *ngIf="type !== 'auth'" formControlName="nickname">
+          Никнейм
+        </tui-input>
+        <tui-input formControlName="email">
+          Почта
+        </tui-input>
+      </tui-group>
+      <tui-group>
+        <tui-input-password formControlName="password">
+          {{type === 'edit' ? 'Изменить пароль' : 'Пароль'}}
+        </tui-input-password>
+        <tui-input-password *ngIf="type !== 'auth'" formControlName="passwordConfirm">
+          Подтвердите {{type === 'edit' ? 'новый' : ''}} пароль
+        </tui-input-password>
+      </tui-group>
     </tui-group>
-    <button tuiButton size="m" [disabled]="form.invalid">{{edit ? 'Изменить' : 'Зарегистрироваться или войти'}}</button>
+    <button tuiButton size="m" [disabled]="form.invalid">
+      <span [ngSwitch]="type">
+        <span *ngSwitchCase="'auth'">Войти</span>
+        <span *ngSwitchCase="'edit'">Изменить</span>
+        <span *ngSwitchCase="'registration'">Зарегистрироваться</span>
+      </span>
+    </button>
   </div>
 </form>
