--- a/investsandbox-frontend/src/app/modules/registration/registration.component.html
+++ b/investsandbox-frontend/src/app/modules/registration/registration.component.html
@@ -1,7 +1,15 @@
 <h6>Регистрация</h6>
-<h1 class="tui-text_h1">Добро пожаловать<br>в InvestSandbox!</h1>
-<h2 class="tui-text_h6">
+<h1 class="tui-text_h1">Добро пожаловать в InvestSandbox!</h1>
+<h3 class="tui-text_h6">
   Тестируйте и анализируйте любые инвестиционные идеи в виртуальных песочницах и находите лучшее решение.
-</h2>
-
-<app-auth-form></app-auth-form>
+</h3>
+<div class="forms">
+  <div class="forms__auth">
+    <h2 class="tui-text_h5">Войдите...</h2>
+    <app-auth-form></app-auth-form>
+  </div>
+  <div class="forms__registration">
+    <h2 class="tui-text_h5">...или зарегистрируйтесь</h2>
+    <app-auth-form type="registration"></app-auth-form>
+  </div>
+</div>
