Add routing and backendApiService

--- a/investsandbox-frontend/src/app/modules/main/portfolios-item/portfolios-item.component.html
+++ b/investsandbox-frontend/src/app/modules/main/portfolios-item/portfolios-item.component.html
@@ -1,4 +1,4 @@
-<tui-island [hoverable]="true">
+<tui-island [hoverable]="true" (click)="toPortfolio()">
   <h2 class="tui-island__title">{{portfolio.title}}</h2>
   <div class="feauters">
     <div>
