--- a/investsandbox-frontend/src/app/modules/main/main.component.html
+++ b/investsandbox-frontend/src/app/modules/main/main.component.html
@@ -1,3 +1,3 @@
-<app-account></app-account>
+<app-account [nickname]="account.nickname" [email]="account.email"></app-account>
 <app-general-stat></app-general-stat>
-<app-portfolios-list></app-portfolios-list>
+<app-portfolios-list [portfolios]="account.portfolios"></app-portfolios-list>
