--- a/frontend/src/app/modules/portfolio/portfolio.component.less
+++ b/frontend/src/app/modules/portfolio/portfolio.component.less
@@ -5,7 +5,13 @@
   width: 75%;
 }
 
-.flex-container {
+.title{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.info {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -16,4 +22,13 @@
   gap: 20px;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-flow: row;
+}
+
+button[appearance="custom"] {
+  color: var(--tui-negative);
+  transition: 0.6s;
+
+  &:hover {
+      background: var(--tui-error-bg-hover);
+  }
 }
