--- a/frontend/src/app/modules/portfolio/portfolio.component.less
+++ b/frontend/src/app/modules/portfolio/portfolio.component.less
@@ -5,6 +5,16 @@
   width: 75%;
 }
 
+.link-to-main {
+  font-size: 1.2rem;
+  display: block;
+  margin-top: 15px;
+
+  &:hover {
+    color: var(--tui-link-hover);
+  }
+}
+
 .title{
   align-items: center;
   display: flex;
@@ -31,4 +41,10 @@ button[appearance="custom"] {
   &:hover {
       background: var(--tui-error-bg-hover);
   }
+}
+
+.loader {
+  display: block;
+  height: 50px;
+  width: 30px;
 }
