--- a/frontend/src/app/modules/auth/auth-form/auth-form.component.html
+++ b/frontend/src/app/modules/auth/auth-form/auth-form.component.html
@@ -3,7 +3,7 @@
     <tui-group [orientation]="verticalOrientation">
       <tui-group>
         <tui-input *ngIf="type === authFormType.EDIT_ACCOUNT || type === authFormType.REGISTRATION" formControlName="nickname">
-          Никнейм
+          Имя
         </tui-input>
         <tui-input formControlName="email" *ngIf="type !== authFormType.EDIT_PASSWORD">
           Почта
