--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -1,3 +1,3 @@
-<app-account [nickname]="account.nickname" [email]="account.email"></app-account>
+<app-account [name]="account.name" [email]="account.email"></app-account>
 <app-general-stat></app-general-stat>
 <app-portfolios-list [portfolios]="account.portfolios"></app-portfolios-list>
