--- a/frontend/src/app/modules/portfolio/portfolio-quotes/portfolio-quotes.component.less
+++ b/frontend/src/app/modules/portfolio/portfolio-quotes/portfolio-quotes.component.less
@@ -4,12 +4,12 @@
   gap: 15px;
 
   &__quote {
-    align-items: center;
+    align-items: flex-start;
     display: flex;
     justify-content: space-between;
 
     &__shortname {
-      margin-bottom: 5px;
+      margin-bottom: 15px;
     }
   }
 }
