--- a/frontend/src/app/modules/portfolio/portfolio-quotes/quotes-buy/quotes-buy.component.html
+++ b/frontend/src/app/modules/portfolio/portfolio-quotes/quotes-buy/quotes-buy.component.html
@@ -8,7 +8,7 @@
         (searchChange)="onSearchChange($event)"
         [stringify]="stringifyQuote()"
       >
-        Название акции, валюты, фонда или ее сокращение (Tesla или TSLA)
+        Название акции, валюты, фонда или ее тикер (Tesla или TSLA)
         <tui-data-list-wrapper
           *tuiDataList
           [items]="items"
