--- a/frontend/src/app/modules/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/modules/page-not-found/page-not-found.component.html
@@ -1,3 +1,4 @@
-<h1>Ой!</h1>
-<p>Такой страницы не сущетсвует(</p>
-<a href="/">Выйти на главную</a>
+<app-logo></app-logo>
+<h1 class="tui-text_h1">Ой!</h1>
+<p class="tui-text_body-xl">Такой страницы не сущетсвует(</p>
+<a tuiLink href="/">Выйти на главную</a>
