--- a/frontend/src/app/modules/portfolio/portfolio-quotes/quotes-buy/quotes-buy.component.html
+++ b/frontend/src/app/modules/portfolio/portfolio-quotes/quotes-buy/quotes-buy.component.html
@@ -55,7 +55,7 @@
       <tui-money [currency]="data.currency" [value]="data.price"></tui-money>
     </div>
     <div>
-      <app-chart-drawer [data]="data.history" size="small"></app-chart-drawer>
+      <app-chart-drawer [data]="data.history" size="S"></app-chart-drawer>
     </div>
   </div>
 </ng-template>
