--- a/frontend/src/app/modules/auth/auth.component.less
+++ b/frontend/src/app/modules/auth/auth.component.less
@@ -8,14 +8,11 @@
 .forms {
   align-items: center;
   display: flex;
+  flex-direction: column;
   gap: 30px;
-  justify-content: space-between;
 
-  &__auth {
-    flex: 0 1 35%;
-  }
-
-  &__registration {
-    flex: 1;
+  > * {
+    max-width: 600px;
+    width: 80%;
   }
 }
