--- a/frontend/src/app/modules/account-form/account-form.component.less
+++ b/frontend/src/app/modules/account-form/account-form.component.less
@@ -12,3 +12,11 @@
   margin-top: 25px;
   text-align: right;
 }
+
+.requirement {
+  color: var(--tui-negative);
+
+  &_good {
+    color: var(--tui-positive);
+  }
+}
