--- a/frontend/src/app/modules/auth/auth.component.html
+++ b/frontend/src/app/modules/auth/auth.component.html
@@ -1,4 +1,4 @@
-<a href="/" title="На главную"><app-logo></app-logo></a>
+<a href="/" title="На главную"><app-logo orientation="v"></app-logo></a>
 <div class="forms">
   <div class="forms__auth">
     <h2 class="tui-text_h5">Войдите...</h2>
