--- a/frontend/src/app/modules/main/account/account.component.html
+++ b/frontend/src/app/modules/main/account/account.component.html
@@ -1,7 +1,7 @@
 <h2 class="tui-text_h3">Мой аккаунт</h2>
 <tui-island>
     <div class="flex-container">
-        <div class="flex-container__login">
+        <div class="flex-container__account">
             <tui-avatar [autoColor]="true" size="l" [text]="name"></tui-avatar>
             <div class="flex-container__login__info">
                 <h2 class="tui-island__title no-margin">{{name}}</h2>
