--- a/frontend/src/app/modules/main/general-stat/general-stat.component.less
+++ b/frontend/src/app/modules/main/general-stat/general-stat.component.less
@@ -1,6 +1,12 @@
+@mobile: ~"(max-width: 430px)";
+
 .flex-container {
   display: flex;
   gap: 15px;
+
+  @media @mobile {
+    flex-direction: column;
+  }
 
   > * {
     flex: 1;
