--- a/frontend/src/app/modules/main/account/account.component.less
+++ b/frontend/src/app/modules/main/account/account.component.less
@@ -1,16 +1,30 @@
+@mobile: ~"(max-width: 430px)";
+
 .flex-container {
   justify-content: space-between;
   align-items: center;
   display: flex;
 
-  &__login {
+  @media @mobile {
+    flex-direction: column;
+  }
+
+  &__account {
     align-items: center;
     display: flex;
     gap: 20px;
 
+    @media @mobile {
+      flex-direction: column;
+    }
+
     &__info {
       display: flex;
       flex-direction: column;
+
+      @media @mobile {
+        text-align: center !important;
+      }
     }
   }
 
@@ -18,6 +32,11 @@
     align-items: center;
     display: flex;
     gap: 10px;
+
+    @media @mobile {
+      flex-direction: column;
+      gap: 0;
+    }
   }
 }
 
