--- a/frontend/src/app/modules/main/portfolios-list/portfolios-list.component.less
+++ b/frontend/src/app/modules/main/portfolios-list/portfolios-list.component.less
@@ -1,3 +1,5 @@
+@mobile: ~"(max-width: 430px)";
+
 .flex-container {
   align-items: center;
   display: flex;
@@ -9,6 +11,10 @@
   gap: 20px;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-flow: row;
+
+  @media @mobile {
+    grid-template-columns: 1fr;
+  }
 }
 
 .margin-bottom {
