--- a/frontend/src/app/modules/portfolio/portfolio-quotes/quotes-item/quotes-item.component.less
+++ b/frontend/src/app/modules/portfolio/portfolio-quotes/quotes-item/quotes-item.component.less
@@ -1,11 +1,24 @@
+@mobile: ~"(max-width: 430px)";
+
 .quotes-list {
   &__quote {
     align-items: flex-start;
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: auto;
+      gap: 10px;
+    }
+
     &__shortname {
       margin-bottom: 15px;
     }
   }
+}
+
+.graphic_mobile {
+  margin: 10px 0 20px;
 }
