--- a/frontend/src/app/modules/portfolio/portfolio.component.html
+++ b/frontend/src/app/modules/portfolio/portfolio.component.html
@@ -28,11 +28,11 @@
     <h3 class="tui-island__title">Объем портфеля</h3>
     <div *ngIf="portfolio.history.onMonth.length > 1">
       <h4 class="tui-island__paragraph">За последние 30 дней</h4>
-      <app-chart-drawer [data]="portfolio.history.onMonth"></app-chart-drawer>
+      <app-chart-drawer [data]="portfolio.history.onMonth" [size]="isMobile ? 'S' : 'L'"></app-chart-drawer>
     </div>
     <div *ngIf="portfolio.history.onAllTime.length > 1">
       <h4 class="tui-island__paragraph">За все время</h4>
-      <app-chart-drawer [range]="ranges.ALL" [data]="portfolio.history.onAllTime"></app-chart-drawer>
+      <app-chart-drawer [range]="ranges.ALL" [data]="portfolio.history.onAllTime" [size]="isMobile ? 'S' : 'L'"></app-chart-drawer>
     </div>
   </tui-island>
   <app-portfolio-quotes [portfolio]="portfolio" [quotes]="portfolio.quotes"></app-portfolio-quotes>
